; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_crisv10.c_rs_break.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/serial/extr_crisv10.c_rs_break.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_struct = type { i64 }
%struct.e100_serial = type { i32*, i32 }

@EIO = common dso_local global i32 0, align 4
@REG_TR_CTRL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tty_struct*, i32)* @rs_break to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rs_break(%struct.tty_struct* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.tty_struct*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.e100_serial*, align 8
  %7 = alloca i64, align 8
  store %struct.tty_struct* %0, %struct.tty_struct** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.tty_struct*, %struct.tty_struct** %4, align 8
  %9 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = inttoptr i64 %10 to %struct.e100_serial*
  store %struct.e100_serial* %11, %struct.e100_serial** %6, align 8
  %12 = load %struct.e100_serial*, %struct.e100_serial** %6, align 8
  %13 = getelementptr inbounds %struct.e100_serial, %struct.e100_serial* %12, i32 0, i32 0
  %14 = load i32*, i32** %13, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %19, label %16

16:                                               ; preds = %2
  %17 = load i32, i32* @EIO, align 4
  %18 = sub nsw i32 0, %17
  store i32 %18, i32* %3, align 4
  br label %45

19:                                               ; preds = %2
  %20 = load i64, i64* %7, align 8
  %21 = call i32 @local_irq_save(i64 %20)
  %22 = load i32, i32* %5, align 4
  %23 = icmp eq i32 %22, -1
  br i1 %23, label %24, label %29

24:                                               ; preds = %19
  %25 = load %struct.e100_serial*, %struct.e100_serial** %6, align 8
  %26 = getelementptr inbounds %struct.e100_serial, %struct.e100_serial* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 8
  %28 = and i32 %27, 63
  store i32 %28, i32* %26, align 8
  br label %34

29:                                               ; preds = %19
  %30 = load %struct.e100_serial*, %struct.e100_serial** %6, align 8
  %31 = getelementptr inbounds %struct.e100_serial, %struct.e100_serial* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = or i32 %32, 192
  store i32 %33, i32* %31, align 8
  br label %34

34:                                               ; preds = %29, %24
  %35 = load %struct.e100_serial*, %struct.e100_serial** %6, align 8
  %36 = getelementptr inbounds %struct.e100_serial, %struct.e100_serial* %35, i32 0, i32 1
  %37 = load i32, i32* %36, align 8
  %38 = load %struct.e100_serial*, %struct.e100_serial** %6, align 8
  %39 = getelementptr inbounds %struct.e100_serial, %struct.e100_serial* %38, i32 0, i32 0
  %40 = load i32*, i32** %39, align 8
  %41 = load i64, i64* @REG_TR_CTRL, align 8
  %42 = getelementptr inbounds i32, i32* %40, i64 %41
  store i32 %37, i32* %42, align 4
  %43 = load i64, i64* %7, align 8
  %44 = call i32 @local_irq_restore(i64 %43)
  store i32 0, i32* %3, align 4
  br label %45

45:                                               ; preds = %34, %16
  %46 = load i32, i32* %3, align 4
  ret i32 %46
}

declare dso_local i32 @local_irq_save(i64) #1

declare dso_local i32 @local_irq_restore(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
